# langchain

./: README.md
1-langchain_intro/: .env.example  README.md  env_utils.py  main.py  pyproject.toml  requirements.txt
1-langchain_intro/notebooks/module-1/: 1.1_foundational_models-groq.ipynb  1.1_foundational_models-ollama.ipynb  1.1_foundational_models-ollama1.ipynb  1.1_foundational_models.ipynb  1.1_prompting-groq.ipynb  1.1_prompting-ollama.ipynb  1.2_tools-groq.ipynb  1.2_tools-ollama.ipynb  1.2_web_search-groq.ipynb  1.2_web_search-ollama.ipynb  1.3_memory-groq.ipynb  1.3_memory-ollama.ipynb  1.3_memory.ipynb  1.4_multimodal_messages-groq.ipynb  1.4_multimodal_messages-ollama.ipynb  1.4_multimodal_messages.ipynb  1.5_personal_chef-groq.ipynb  1.5_personal_chef-ollama.ipynb  1.6_personal_chef-groq.py  1.6_personal_chef-ollama.py  1.6_personal_chef-ollama.txt
1-langchain_intro/notebooks/module-2/: 2.1_mcp-groq.ipynb  2.1_mcp-ollama.ipynb  2.1_travel_agent ollama.ipynb  2.1_travel_agent ollama1.ipynb  2.1_travel_agent ollama2.ipynb  2.1_travel_agent-groq.ipynb  2.1_travel_agent-ollama.ipynb  2.1_travel_agent-ollama1.ipynb  2.1_travel_agent.ipynb  2.2_runtime_context-groq.ipynb  2.2_runtime_context-ollama.ipynb  2.2_runtime_context-ollama1.ipynb  2.2_runtime_context.ipynb  2.2_state-groq.ipynb  2.2_state-ollama.ipynb  2.2_state.ipynb  2.3_multi_agent-groq.ipynb  2.3_multi_agent-ollama.ipynb  2.3_multi_agent.ipynb  2.4_wedding_planners-groq.ipynb  2.4_wedding_planners-ollama.ipynb  2.4_wedding_planners.ipynb  2.5_bonus_rag-groq.ipynb  2.5_bonus_rag-ollama.ipynb  (+3 more)
2-langchain_essentials/: L1_fast_agent-groq.ipynb  L1_fast_agent-ollama.ipynb  L2_messages-groq.ipynb  L2_messages-ollama.ipynb  L2_messages.ipynb  L3_streaming-groq.ipynb  L3_streaming-ollama.ipynb  L4_tools-groq.ipynb  L4_tools-ollama.ipynb  L4_tools.ipynb  L5_tools_with_mcp-groq.ipynb  L5_tools_with_mcp-ollama.ipynb  L6_memory-groq.ipynb  L6_memory-ollama.ipynb  L6_memory-ollama1.ipynb  L6_memory.ipynb  L7_structuredOutput-groq.ipynb  L7_structuredOutput-ollama.ipynb  L7_structuredOutput.ipynb  L8_dynamic-groq.ipynb  L8_dynamic-ollama.ipynb  L9_HITL-groq.ipynb  L9_HITL-ollama.ipynb  L9_HITL.ipynb  example.env  main.py  pyproject.toml  requirements copy.txt  requirements.txt
3-langgraph_intro/: main.py  pyproject.toml  requirements.txt
3-langgraph_intro/module-0/: basics-ollama.ipynb
3-langgraph_intro/module-1/: 1-simple-graph-ollama.ipynb  2-chain-ollama.ipynb  2-chain.ipynb  3-router-ollama.ipynb  3-router.ipynb  4-agent-ollama.ipynb  4-agent.ipynb  5-agent-memory-ollama.ipynb  5-agent-memory.ipynb  6-deployment-ollama.ipynb
3-langgraph_intro/module-2/: 1-state-schema-ollama.ipynb  2-state-reducers-ollama.ipynb  4-trim-filter-messages-ollama.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization-ollama.ipynb  5-chatbot-summarization.ipynb  6-chatbot-external-memory-ollama.ipynb
3-langgraph_intro/module-3/: 1-streaming-interruption-0llama.ipynb  1-streaming-interruption-ollama.ipynb  1-streaming-interruption.ipynb  2-breakpoints-ollama.ipynb  3-edit-state-human-feedback-ollama.ipynb  4-dynamic-breakpoints-ollama.ipynb  4-dynamic-breakpoints.ipynb  5-time-travel-ollama.ipynb  5-time-travel.ipynb
3-langgraph_intro/module-4/: 1-parallelization-ollama.ipynb  1-parallelization.ipynb  2-sub-graph-ollama.ipynb  3-map-reduce-ollama.ipynb  4-research-assistant-ollama-1.ipynb  4-research-assistant-ollama-2.ipynb  4-research-assistant-ollama-3.ipynb  4-research-assistant-ollama.ipynb  4-research-assistant.ipynb  research_log.txt
3-langgraph_intro/module-5/: 1-memory_agent-ollama.ipynb  1-memory_agent.ipynb  2-memory_store-ollama.ipynb  3-memoryschema_profile-ollama.ipynb  4-memoryschema_collection-ollama.ipynb
3-langgraph_intro/module-6/: 1-creating-ollama.ipynb  2-connecting-ollama.ipynb  3-double-texting-ollama.ipynb  4-assistant-ollama.ipynb
4-langchain_essentials/: L1_nodes-ollama.ipynb  L1_nodes.ipynb  L2_edges-ollama.ipynb  L2_edges.ipynb  L3-L4_cedges_memory.ipynb  L6_EmailAgent-ollama.ipynb  example.env  main.py  pyproject.toml  requirements.txt
(+65 files in other folders)
