[project]
name = "1-langchain-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "jupyterlab-git>=0.51.4",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=3.1.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-model-profiles>=0.0.4",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-api>=0.5.37",
    "langgraph-cli>=0.4.9",
    "langsmith>=0.4.43",
    "mcp>=1.21.1",
    "pypdf>=6.2.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "tavily>=1.1.0",
    "tavily-python>=0.7.13",
]
