[project]
name = "3-langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.1",
    "jupyterlab-git>=0.51.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.2",
    "langgraph-cli[inmem]>=0.4.11",
    "langgraph-prebuilt>=1.0.6",
    "langgraph-sdk>=0.3.3",
    "langsmith>=0.6.4",
    "notebook>=7.5.2",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
