[project]
name = "3-langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.30.0",
    "jupyterlab>=4.5.1",
    "jupyterlab-git>=0.50.1",
    "langchain>=1.2.7",
    "langchain-community>=0.3.0",
    "langchain-core>=1.2.7",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-prebuilt>=1.0.7",
    "langgraph-sdk>=0.3.3",
    "langsmith>=0.3.0",
    "notebook>=7.3.0",
    "pydantic>=2.10.0",
    "sentencepiece>=0.2.0",
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "trustcall>=0.0.12",
    "typing-extensions>=4.12.2",
    "wikipedia>=1.4.0",
]
